# rustapi

./: .env  .env.example  .gitignore  Cargo.toml  Makefile
migrations/: 20230716054622_user.up.sql
src/: main.rs
src/code/: auth.rs  common.rs  mod.rs  model.rs  password.rs  token.rs  user.rs
src/conf/: env.rs
src/db/: mysql.rs  postgres.rs
src/dto/: user.rs
src/error/: api.rs  db.rs  mod.rs  password.rs  request.rs  token.rs  user.rs
src/handler/: auth.rs  mod.rs  profile.rs  register.rs
src/middleware/: auth.rs
src/model/: code.rs  login.rs  mod.rs  token.rs  user.rs
src/repo/: user.rs
src/response/: api.rs
src/route/: auth.rs  mod.rs  profile.rs  register.rs  root.rs
src/service/: mod.rs  token.rs  user.rs
src/state/: token.rs  user.rs
src/utils/: password.rs
